--- a/arches_hip/templates/views/forms/related-resources.htm
+++ b/arches_hip/templates/views/forms/related-resources.htm
@@ -287,7 +287,7 @@
                                             <!-- Spacer for XS screens-->
                                             <div class="hidden-sm hidden-md hidden-lg" style="margin-top: 5px;"></div>
 
-                                            <div class="btn-group pull-right" style="margin-top: 15px;margin-right: 10px;">
+                                            <div class="btn-group pull-right" style="margin-top: 15px;margin-right: 10px;" data-bind="if: !relationBranch.editing()">
                                                 <button type="button" class="btn btn-xs btn-primary arches-RDM-button" data-bind="text: !relationBranch.isnew() ? '{% trans 'Edit Relationship' %}' : '{% trans 'Add Relationship' %}', click: editClick"></button>
                                             </div>
                                             
