fix for related files not updating the relationship type

--- a/arches_hip/templates/views/forms/related-files.htm
+++ b/arches_hip/templates/views/forms/related-files.htm
@@ -221,7 +221,7 @@
 
                                             <div class="row"> 
                                                 <div class="col-xs-12">  
-                                                    <input style="width: 100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('ARCHES_RESOURCE_CROSS-REFERENCE_RELATIONSHIP_TYPES.E55', 'relationshiptype'), placeholder: '{% trans "Relationship Type" %}', dataKey: 'RELATIONSHIP_TYPES.E32'}"></input>
+                                                    <input style="width: 100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('ARCHES_RESOURCE_CROSS-REFERENCE_RELATIONSHIP_TYPES.E55', 'value'), placeholder: '{% trans "Relationship Type" %}', dataKey: 'RELATIONSHIP_TYPES.E32'}"></input>
                                                 </div>
                                             </div>
 
