Parameterized the display of parent concepts in select2 dropdown result

--- a/arches_hip/templates/views/forms/evaluation.htm
+++ b/arches_hip/templates/views/forms/evaluation.htm
@@ -148,7 +148,7 @@
 
                                                                                 <!-- Threats Input-->   
                                                                                 <h5 class="section-headline margin-bottom-5">Evaluation Criteria</h5>  
-                                                                                <input style="width:100%; display:inline-block;" class="select2 arches-select2-crud-form name-type designation" data-bind="select2: {value: getEditedNode('EVALUATION_CRITERIA_TYPE.E55', 'value'),  placeholder: '{% trans "Evaluation Criteria" %}', dataKey: 'EVALUATION_CRITERIA_TYPE.E55'}">&nbsp;&nbsp;
+                                                                                <input style="width:100%; display:inline-block;" class="select2 arches-select2-crud-form name-type designation" data-bind="select2: {value: getEditedNode('EVALUATION_CRITERIA_TYPE.E55', 'value'),  placeholder: '{% trans "Evaluation Criteria" %}', dataKey: 'EVALUATION_CRITERIA_TYPE.E55', showParents: showParents}">&nbsp;&nbsp;
 
                                                                             </div>
                                                                         </div>
