Fixed keyword placeholder

--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -278,9 +278,9 @@
                     <dd>
                         <div class="row">
                             <div class="col-xs-12">
-                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type hidden-xs" id="keyword-dropdown" placeholder: "{% trans "Picnic" %}" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), dataKey: 'KEYWORD.E55'}"></input>
+                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type hidden-xs" id="keyword-dropdown" placeholder="{% trans 'Keyword' %}" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), dataKey: 'KEYWORD.E55'}"></input>
 
-                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type  hidden-sm hidden-md hidden-lg" id="keyword-dropdown" placeholder: "{% trans "Keyword" %}" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), dataKey: 'KEYWORD.E55'}"></input>
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type  hidden-sm hidden-md hidden-lg" id="keyword-dropdown" placeholder= "{% trans 'Keyword' %}" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), dataKey: 'KEYWORD.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
