putting from/to date on the same line in related resources form

--- a/arches_hip/templates/views/forms/related-resources.htm
+++ b/arches_hip/templates/views/forms/related-resources.htm
@@ -153,14 +153,14 @@
                                     </a>
                                 </div>
                                 <div class="related-resource-details">
-                                    <div data-bind='visible: relationship.datestarted'>
+                                    <span data-bind='visible: relationship.datestarted'>
                                         <strong>From:</strong>
                                         <span data-bind='text: relationship.datestarted'></span>
-                                    </div>
-                                    <div data-bind='visible: relationship.dateended'>
+                                    </span>
+                                    <span data-bind='visible: relationship.dateended'>
                                         <strong>To:</strong>
                                         <span data-bind='text: relationship.dateended'></span>
-                                    </div>
+                                    </span>
                                     <div data-bind='visible: relationship.notes'>
                                         <strong>Notes:</strong>
                                     </div>
